--- a/_posts/2024.05.18.md
+++ b/_posts/2024.05.18.md
@@ -1,5 +1,50 @@
-
-
+---
+layout : post
+title : "파이썬 9주차"
+---
+### 재미있는 파이썬(❁´◡`❁)
+## for문
+### 1. 리스트 요소 차례로 출력하기
+```python
+list= ['a','b','c']
+for s in list :
+    print(s)
+```
+### 2.리스트 요소들의 평균 구하기
+```python
+num_list= [1,2,3,4,5]
+sum=0
+for num in num_list :
+    sum+= num
+print('avg : %d' % (sum//5))
+```
+## range()함수
+### 1.start, step 생략
+```python
+for i in range(10) :
+    print(i, end=' ')
+```
+### 1.한칸의 <span style="color:red">가로세로가 동일한 격자 형태의 통로</span>에 여섯 마리의 강아지가 얌전히 앉아 있다. 강아지들은 모두 얌전해서 자리에서 움직이지 않지만 만약을 대비해서 각 강아지에 목줄을 걸어 한 사람이 목줄을 잡고 있으려고 한다.목의 합이 최소가 되는 곳은?
+```python
+dogs=[(1,1),(1,2),(0,4),(5,5),(3,4),(2,2)]
+peoples=[(1,3),(2,3),(3,3),(1,4),(2,4)]
+dog=dogs[0]
+for i in range(6):
+    print(dogs[i])
+people=peoples[0]
+for i in range(5):
+    print(peoples[i])
+distance=people[0]-dog[0]+people[1]-dog[1]
+sum = 0 
+for i in range(5):
+    people=peoples[i]
+    sum =0
+    for a in range(6):
+        dog=dogs[a]
+        distance=people[0]-dog[0]+people[1]-dog[1]
+        sum += abs(distance)
+    print(sum) 
+```
 
 
 
